--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -45,7 +45,7 @@ address {
     position: absolute;
     bottom: -1.5rem;
     right: 50%;
-    margin-left: 1.25rem;
+    margin-left: -1.25rem;
     @media (min-width: 768px) {
         bottom: 0;
         right: 1rem;
