--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -64,7 +64,7 @@
         }
     }
     
-    .flash-before {
+    .hem .flash-before {
         opacity: 0;
     }
     
